hsmc-macros/tests/ui/t10_2_during_overlap_same_state.stderr
error: field `a` is borrowed by two concurrent durings on state `S` (`one` and `two`) — move one of them to a disjoint field or combine the activities into a single during that uses `select`
  --> tests/ui/t10_2_during_overlap_same_state.rs:21:21
   |
21 |         during: two(a);
   |                     ^
